fixes
footer button - added styling to footer button.

navigation - added JS to hide/show input and button.

JS - removed console.log and declutter.

JS - added sampleSearch function as a sample search for main page.

HTML /CSS - declutter, change color names to hex values to fix issue with iphones, not showing colors.

--- a/food.css
+++ b/food.css
@@ -26,12 +26,6 @@ a:focus {
     color: #daa520;
 }
 
-
-
-.active {
-    color: #daa520;
-}
-
 .navigation {
     display: flex;
     flex-direction: column;
@@ -192,7 +186,7 @@ a:focus {
     color: #daa520;
 }
 
-.append-container-meals-title a:hover {
+.append-container-meals-title a:hover, a:active {
     color: white;
 }
 
@@ -231,7 +225,7 @@ a:focus {
 }
 
 .offcanvas-body {
-    background-color: #14110e;
+    background-color: #1b1610;
     color: #daa520;
 }
 
@@ -268,11 +262,32 @@ a:focus {
     border-radius: 10px;
 }
 
+.footer-top a:hover {
+    background-color: #daa520;
+    color: #1b1610;
+    transition: 500ms;
+}
+
 .footer-bottom i {
     font-size: 2rem;
     margin: 0 1rem;
 }
 
+.footer-bottom i:hover {
+    color: #fff;
+}
+
+.d-none {
+    display: none;
+}
+
+.d-block {
+    display: block;
+}
+
+.active {
+    color: #daa520;
+}
 
 @media only screen and (max-width: 820px) {
     .append-container-meals {
@@ -285,9 +300,9 @@ a:focus {
 @media only screen and (max-width: 576px) {
 
     .header-main-container h1 {
-            font-size: 2.7rem;
-            margin: 1rem 0;
-        }
+        font-size: 2.7rem;
+        margin: 1rem 0;
+    }    
 
     .header-main-container h2 {
         font-size: 2.7rem;
